--- a/src/app/pages/board/board.page.html
+++ b/src/app/pages/board/board.page.html
@@ -30,7 +30,7 @@
     <div>
       <!-- Textarea in an item with a floating label -->
       <ion-item>
-          <ion-label position="floating">title</ion-label>
+          <ion-label position="floating">id</ion-label>
           <ion-input type="text" formControlName="id"></ion-input>
       </ion-item>
       <ion-item>
