--- a/src/app/pages/board/board_test.page.html
+++ b/src/app/pages/board/board_test.page.html
@@ -2,29 +2,38 @@
 </ion-header>
 
 <ion-content>
-  <ion-label> Schedule</ion-label>
   <ion-row>
     <ion-col *ngFor="let day of schedule">
       <!-- <ion-icon [name]="item.icon" item-start></ion-icon>
       {{item.title}}
       <div class="item-note" item-end>
         {{item.note}} -->
-      <ion-card>
-        <ion-item class="activated">
+      <form [formGroup]="myForm">
+        <ion-card>
+          <ion-item class="activated">
             <ion-icon name="pin" slot="start"></ion-icon>
             <ion-item>
-                <ion-label position="floating" no-line>{{day.title}}</ion-label>
-                <ion-input no-line></ion-input>
-              </ion-item>
+              <ion-label position="floating" no-line>{{day.title}}</ion-label>
+              <ion-input type="text" formControlName="contents"></ion-input>
+            </ion-item>
             <ion-button fill="outline" (click)="addContent(day)">+</ion-button>
             <ion-button fill="outline" (click)="deleteContent(day)">-</ion-button>
-        </ion-item>
-        <ion-list>
-          <ion-item *ngFor="let content of day.contents" class="activated">
-            <ion-label> {{content}}</ion-label>
-            <ion-button fill="outline" slot="end">View</ion-button>
           </ion-item>
-        </ion-list>
+          <ion-list>
+            <ion-item *ngFor="let content of day.contents" class="activated">
+              <ion-label> {{content}}</ion-label>
+              <ion-button fill="outline" slot="end">View</ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+      </form>
+    </ion-col>
+    <ion-col>
+      <ion-card>
+        <ion-item class="activated">
+          <ion-button fill="outline" (click)="increseDay()">+</ion-button>
+          <ion-button fill="outline" (click)="decreseDay()">-</ion-button>
+        </ion-item>
       </ion-card>
     </ion-col>
   </ion-row>
